<resources>
    <string name="please_enter_nodeId">请输入设备nodeId</string>
    <string name="sound_effects">通话音效</string>
    <string name="device_manager">设备管理</string>
    <string name="delete_device">删除设备</string>
    <string name="voice_ktv">ktv</string>
    <string name="voice_phonograph">留声机</string>
    <string name="voice_Recordingstudio">录音棚</string>
    <string name="voice_stereo">立体声</string>
    <string name="voice_open">空旷</string>
    <string name="voice_3D">3D</string>
    <string name="voice_concert">演唱会</string>
    <string name="voice_uncle">大叔</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开</string>
    <string name="mute">静音</string>
    <string name="unmute">音放</string>
    <string name="record">录像</string>
    <string name="stop_record">停止</string>
    <string name="converse">通话</string>
    <string name="preview">预览</string>
    <string name="stream_media">流媒体</string>
    <string name="screenShot">截图</string>
    <string name="fullScreen">全屏</string>
    <string name="forbidmic">禁麦</string>
    <string name="Please_enter_project_information">请输入项目信息</string>
    <string name="please_enter_appId">请输入 AppId</string>
    <string name="Please_enter_CustomerKey">请输入 CustomerKey</string>
    <string name="Please_enter_CustomerSecret">请输入 CustomerSecret</string>
    <string name="Please_select_a_region">请选择区域:</string>
    <string name="confirm">确定</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
    <string name="stream_media_mgr">流媒体管理</string>
    <string name="back">返回</string>
    <string name="Encrypt_or_not">是否加密?</string>
    <string name="encry">加密</string>
    <string name="noEncry">不加密</string>
    <string name="video_quality">视频质量</string>
    <string name="start_transfer">开始传输</string>
    <string name="end_transfer">停止传输</string>
    <string name="clear_recored">清除记录</string>
    <string name="account_safety">帐号安全</string>
    <string name="clear_application_config">清除应用配置</string>
    <string name="about">关于</string>
    <string name="cancel_Account">注销</string>
    <string name="log_out">退出登录</string>
    <string name="clear_application_tip">清除应用配置后进程退出，下次进入需重新配置appid,确定清除？</string>
    <string name="current_does_not_support_logout">当前不支持注销操作</string>
    <string name="you_want_to_log_out">确定要登出帐号吗?</string>
    <string name="version_number">版本号：2.1.2.0</string>
    <string name="version_is">版本号：%s</string>
    <string name="app_name">灵隼2.0</string>
    <string name="app_name_en">Agora Link</string>
    <string name="title_home">首页</string>
    <string name="title_mine">我的</string>
    <string name="try_again_to_exit">再按一次退出应用</string>
    <string name="userAgreementAndPrivacyPolicy">用户协议与隐私政策</string>
    <string name="privacy_protection_tip">我们非常重视用户的隐私保护，因此制定了本涵盖如何收集、使用、披露、分享以及存储用户的信息的《隐私条款》。用户在使用我们的服务时，我们可能会收集和使用您的相关信息。我们希望通过本《隐私条款》向您说明，在使用我们的服务时，我们如何收集、使用、储存和分享这些信息，以及我们为您提供的访问、更新、控制和保护这些信息的方式。</string>
    <string name="user_agreement">用户协议</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="and">与</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="auto">自动</string>
    <string name="please_select_country">请选择国家/地区</string>
    <string name="country_area">国家/地区</string>
    <string name="please_input_account">请输入用户账号</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登录</string>
    <string name="finish">完成</string>
    <string name="register_account">注册账号</string>
    <string name="get_v_code">获取验证码</string>
    <string name="select_country_tip">请注意，如果选择的国家/地区不正确，可能影响正常使有用</string>
    <string name="set_pwd">设置密码</string>
    <string name="please_input_v_code">请输入验证码</string>
    <string name="add_device">添加设备</string>
    <string name="my_devices">我的设备</string>
    <string name="do_scan">扫一扫</string>
    <string name="define">确定</string>
    <string name="delete">删除</string>
    <string name="reset_device">重置设备</string>
    <string name="reset_tips_1">请选安装电池或连接电源</string>
    <string name="reset_tips_2">再按住电池仓内的set按钮5秒</string>
    <string name="reset_tips_3">随后听到提示音并确认指示灯闪烁</string>
    <string name="reset_tips_4">请确认指示灯在闪烁或者听到提示音</string>
    <string name="next_step">下一步</string>
    <string name="connect_wifi">连接WiFi</string>
    <string name="set_wifi_tips_1">连接2.4GHz WiFi网络并输入密码</string>
    <string name="set_wifi_tips_2">设备WiFi目前仅支持2.4G WiFi</string>
    <string name="please_select_wifi">请选择WiFI</string>
    <string name="add_fail_tips_1">设备已被其他用户梆定，不能重复梆定</string>
    <string name="add_fail_tips_2">请到原账号进行移除，或</string>
    <string name="contact_customer_service">联系客服提交解除绑定</string>
    <string name="add_fail">添加失败</string>
    <string name="add_success">添加成功</string>
    <string name="edit_device_name">修改设备名称</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="device_connect_net_time_out">设备连接网络超时</string>
    <string name="please_troubleshooting_problems">请排查以下问题后重试</string>
    <string name="no_wifi_tips1">检查设备是否处于待配网状态</string>
    <string name="no_wifi_tips2">检查WiFi是否为2.4G</string>
    <string name="no_wifi_tips3">核对WiFi密码是否正确</string>
    <string name="no_wifi_tips4">扫描二维码时是否听到提示音</string>
    <string name="no_wifi_tips5">检查设备是否靠近路由器</string>
    <string name="no_wifi_tips6">检查手机蓝牙是否打开</string>
    <string name="no_wifi_tips7">检查手机是否靠近设备</string>
    <string name="try_again_by_step">按步骤重试</string>
    <string name="device_connect_bt_time_out">设备连接蓝牙超时</string>
    <string name="select_devcfg_mode">请选择配网方式</string>
    <string name="select_devcfg_camera">摄像头</string>
    <string name="select_devcfg_bt">蓝牙</string>
    <string name="HD">高清</string>
    <string name="SD">标清</string>
    <string name="rec">REC</string>
    <string name="siren">警笛</string>
    <string name="pir_open">PIR开关</string>
    <string name="motion_detection">移动侦测</string>
    <string name="sound_detection">声音检测</string>
    <string name="night_vision">红外夜视</string>
    <string name="wdr">WDR</string>
    <string name="function">功能</string>
    <string name="message">消息</string>
    <string name="control">控制</string>
    <string name="today">今天</string>
    <string name="all_type">全部类型</string>
    <string name="video_loading">远程视频加载中</string>
    <string name="click_retry">点击重试</string>
    <string name="no_power">电量不足，请更换电池</string>
    <string name="has_know">知道了</string>
    <string name="video_legibility">视频画质</string>
    <string name="change_voice">变声</string>
    <string name="original_sound">原声</string>
    <string name="uncle">大叔</string>
    <string name="lolita">萝莉</string>
    <string name="young">少年</string>
    <string name="low_sensitivity">低灵敏度</string>
    <string name="middle_sensitivity">中灵敏度</string>
    <string name="high_sensitivity">高灵敏度</string>
    <string name="open">开启</string>
    <string name="replay">回放</string>
    <string name="album">相册</string>
    <string name="change_voice_call">变声通话</string>
    <string name="change_voice_type1">变声(大叔)</string>
    <string name="change_voice_type2">变声(少年)</string>
    <string name="change_voice_type3">变声(萝莉)</string>
    <string name="change_voice_type4">变声(猪八戒)</string>
    <string name="change_voice_type5">变声(空灵)</string>
    <string name="change_voice_type6">变声(沉闷)</string>
    <string name="save_video_tip">视频已保存至相册</string>
    <string name="save_pic_tip">截图已保存至相册</string>
    <string name="view_album">查看相册</string>
    <string name="start_download">开始下载</string>
    <string name="stop_download">下载完成</string>
    <string name="edit">编辑</string>
    <string name="confirm_deletion">确认删除？</string>
    <string name="call_button">呼叫按钮</string>
    <string name="human_infrared_detection">人体红外侦测</string>
    <string name="type">类型</string>
    <string name="def_mobile">138****8000</string>
    <string name="message_center">消息中心</string>
    <string name="general_settings">通用设置</string>
    <string name="settings">设置</string>
    <string name="settings_info">设置信息</string>
    <string name="message_push">消息推送</string>
    <string name="app_update">应用更新</string>
    <string name="update">更新</string>
    <string name="user_info">个人资料</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="select_from_album">相册中选择</string>
    <string name="photograph">拍照</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="please_input_device_name">请输入设备名称</string>
    <string name="msg_push">消息推送</string>
    <string name="check_app_update">检查应用更新</string>
    <string name="check_update">检查更新</string>
    <string name="has_new_update">检测到新版本</string>
    <string name="account_security">账号安全</string>
    <string name="system_permission_setting">系统权限设置</string>
    <string name="logout">退出登录</string>
    <string name="message_alarm">告警消息</string>
    <string name="message_notification">通知消息</string>
    <string name="change_password">修改密码</string>
    <string name="please_input_old_pwd">请输入旧密码</string>
    <string name="please_input_new_pwd">请输入新密码</string>
    <string name="error_pwd_tip">8-20个字符，包含大、小写字母和数字</string>
    <string name="notification_reminder">通知提醒</string>
    <string name="notification_reminder_tip">为及时收到报警消息，建议开启此选项</string>
    <string name="has_authorized">已授权</string>
    <string name="no_authorized">未授权</string>
    <string name="allow_background_operation">允许后台运行</string>
    <string name="allow_background_operation_tip">为接收远程呼叫或通知，建议开启此选项</string>
    <string name="used_agree">使用该应用即表示您同意</string>
    <string name="message_no">暂无消息</string>
    <string name="device">设备</string>
    <string name="msg_tip">请查收通知消息</string>
    <string name="device_name_is">设备名称：</string>
    <string name="ring_off">挂断</string>
    <string name="answer">接听</string>
    <string name="device_code_scanning">设备扫码</string>
    <string name="scanner_tips1">将二维码正对摄像头，保持15-20cm距</string>
    <string name="scanner_tips2">保持静止几秒钟，随后会听到提示音</string>
    <string name="scanner_tips3">如果没有听到提示音，请检查摄像头</string>
    <string name="scanner_tips4">调整距离、角度，多试几次</string>
    <string name="device_bt_scanning_title">正在发现设备</string>
    <string name="device_bt_scanning_tips">请将设备保持通电状态\n并将手机靠近设备</string>
    <string name="device_bt_scannedone_tips">发现设备,请选择需要配网的设备</string>
    <string name="device_bt_not_found">未搜索到设备</string>
    <string name="device_bt_not_found_tips2">检查设备是否在附近</string>
    <string name="hear_the_tone">听到提示音</string>
    <string name="device_adding">正在添加设备</string>
    <string name="please_device_has_power">请确保设备处于通电状态</string>
    <string name="has_create_connect">正在建立连接</string>
    <string name="device_info">设备信息</string>
    <string name="base_setting">基本功能设置</string>
    <string name="detection_alarm_setting">侦测告警设置</string>
    <string name="share_device">共享设备</string>
    <string name="share_detail">共享详情</string>
    <string name="share_device_setting">共享设备设置</string>
    <string name="device_firmware_upgrade">设备固件升级</string>
    <string name="firmware_upgrade">固件升级</string>
    <string name="is_the_latest_version">已是最新版本</string>
    <string name="reboot_device">重启设备</string>
    <string name="remove_device">移除设备</string>
    <string name="remove_share">移除分享</string>
    <string name="device_id">设备ID</string>
    <string name="status_indicator">状态指示灯</string>
    <string name="device_from">设备来自</string>
    <string name="add_share">添加共享</string>
    <string name="cancel_share">取消共享</string>
    <string name="no_share_tips1">可视门铃暂未共享给其他人</string>
    <string name="btcfg_tips1">手机与设备连接成功</string>
    <string name="btcfg_tips2">向设备发送信息成功</string>
    <string name="btcfg_tips3">设备连接WIFI成功</string>
    <string name="btcfg_tips4">设备连接云端成功</string>
    <string name="btcfg_tips5">初始化成功</string>
</resources>