<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.agora.iotlink.widget.CommonTitleView
        android:id="@+id/title_view"
        style="@style/title_view"
        app:ctv_hideLeftImage="true"
        app:ctv_rightText="@string/close"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/device_connect_net_time_out"
        android:textColor="@color/def_text_color"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:text="@string/please_troubleshooting_problems"
        android:textColor="@color/black_50_percent"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/reset_tip_num_style"
        android:layout_marginStart="77dp"
        android:layout_marginTop="123dp"
        android:text="@string/one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/reset_tip_style"
        android:layout_marginStart="103dp"
        android:layout_marginTop="120dp"
        android:text="@string/no_wifi_tips1"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/reset_tip_num_style"
        android:layout_marginStart="77dp"
        android:layout_marginTop="155dp"
        android:text="@string/two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/reset_tip_style"
        android:layout_marginStart="103dp"
        android:layout_marginTop="152dp"
        android:text="@string/no_wifi_tips2"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/reset_tip_num_style"
        android:layout_marginStart="77dp"
        android:layout_marginTop="187dp"
        android:text="@string/three"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/reset_tip_style"
        android:layout_marginStart="103dp"
        android:layout_marginTop="184dp"
        android:text="@string/no_wifi_tips3"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/reset_tip_num_style"
        android:layout_marginStart="77dp"
        android:layout_marginTop="219dp"
        android:text="@string/four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/reset_tip_style"
        android:layout_marginStart="103dp"
        android:layout_marginTop="216dp"
        android:text="@string/no_wifi_tips4"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/reset_tip_num_style"
        android:layout_marginStart="77dp"
        android:layout_marginTop="251dp"
        android:text="@string/five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/reset_tip_style"
        android:layout_marginStart="103dp"
        android:layout_marginTop="248dp"
        android:text="@string/no_wifi_tips5"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNextStep"
        style="@style/def_btn_full"
        android:layout_width="285dp"
        android:layout_height="56dp"
        android:layout_marginTop="375dp"
        android:text="@string/try_again_by_step"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view" />
</androidx.constraintlayout.widget.ConstraintLayout>