<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <io.agora.iotlinkdemo.widget.CommonTitleView
        android:id="@+id/title_view"
        style="@style/title_view"
        app:ctv_centerText="@string/reset_device"
        app:ctv_hideLeftImage="true"
        app:ctv_rightText="@string/cancel"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/reset_tip_num_style"
        android:layout_marginStart="60dp"
        android:layout_marginTop="23dp"
        android:text="@string/one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/reset_tip_style"
        android:layout_marginStart="86dp"
        android:layout_marginTop="20dp"
        android:text="@string/reset_tips_1"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/reset_tip_num_style"
        android:layout_marginStart="60dp"
        android:layout_marginTop="53dp"
        android:text="@string/two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/reset_tip_style"
        android:layout_marginStart="86dp"
        android:layout_marginTop="50dp"
        android:text="@string/reset_tips_2"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/reset_tip_num_style"
        android:layout_marginStart="60dp"
        android:layout_marginTop="83dp"
        android:text="@string/three"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/reset_tip_style"
        android:layout_marginStart="86dp"
        android:layout_marginTop="80dp"
        android:text="@string/reset_tips_3"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivDeviceIcon"
        android:layout_width="322dp"
        android:layout_height="322dp"
        android:layout_marginTop="120dp"
        android:src="@mipmap/imgbig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:button="@drawable/bg_cb_check_status"
        android:paddingStart="10dp"
        android:text="@string/reset_tips_4"
        android:textColor="@color/black_50_percent"
        app:layout_constraintEnd_toEndOf="@id/ivDeviceIcon"
        app:layout_constraintStart_toStartOf="@id/ivDeviceIcon"
        app:layout_constraintTop_toBottomOf="@id/ivDeviceIcon"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNextStep"
        style="@style/def_btn_full"
        android:layout_width="285dp"
        android:layout_height="56dp"
        android:layout_marginTop="54dp"
        android:enabled="false"
        android:text="@string/next_step"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbConfirm" />
</androidx.constraintlayout.widget.ConstraintLayout>