<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <io.agora.iotlinkdemo.widget.CommonTitleView
        android:id="@+id/title_view"
        style="@style/title_view"
        app:ctv_centerText="@string/device_adding"
        app:ctv_hideLeftImage="true"
        app:ctv_rightText="@string/cancel"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBtCfgTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/please_device_has_power"
        android:textColor="@color/def_text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/pbBtCfgProgress"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBtCfgTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBtCfgTips1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="120dp"
        android:text="@string/btcfg_tips1"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pbBtCfgProgress"
        tools:ignore="MissingConstraints"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBtCfgTips2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="120dp"
        android:text="@string/btcfg_tips2"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBtCfgTips1"
        tools:ignore="MissingConstraints"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBtCfgTips3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="120dp"
        android:text="@string/btcfg_tips3"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBtCfgTips2"
        tools:ignore="MissingConstraints"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBtCfgTips4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="120dp"
        android:text="@string/btcfg_tips4"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBtCfgTips3"
        tools:ignore="MissingConstraints"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBtCfgTips5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="120dp"
        android:text="@string/btcfg_tips5"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBtCfgTips4"
        tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>